fixed font size so it becomes smaller on smaller screens with input boxes

--- a/page2Style.css
+++ b/page2Style.css
@@ -34,6 +34,7 @@ input {
   width: 14vw;
   height: 2vw;
   text-align: center;
+  font-size: 1vw;
 }
 
 input::-webkit-input-placeholder {
