--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,14 @@
 }
 
 #d1Val {
-  width: 1vw;
+  width: 1.7vw;
 }
 
 input:not([type=checkbox]) {
   width: 14vw;
   height: 2vw;
   text-align: center;
+  font-size: 1vw;
 }
 
 
